[gd_scene load_steps=45 format=2]

[ext_resource path="res://Health.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://assets/player/sound/swoosh.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/player/pirate_animations2.png" type="Texture" id=6]
[ext_resource path="res://assets/player/sound/splash.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/player/sound/jump.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/flap2.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/interface/Interface.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 0, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 20, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 40, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 60, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 20, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 40, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 60, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 20, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 40, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 20, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 40, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 60, 20, 20, 20 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "attack",
"speed": 4.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "dash",
"speed": 25.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "fall",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "jump",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 18.8165, 34.2139 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0, 0.667447 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 19 )
width = 21

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.321951, 0.367045 ), -1.44008, -1.44008, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=23]
emission_shape = 2
emission_box_extents = Vector3( 3, 3, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 34.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.25
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 12.0
scale_curve = SubResource( 22 )
color_ramp = SubResource( 20 )

[sub_resource type="Curve" id=24]
_data = [ Vector2( 0, 200 ), 0.0, 0.0, 0, 0, Vector2( 0.156098, -131.364 ), -307.905, -307.905, 0, 0, Vector2( 1, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=25]
curve = SubResource( 24 )

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.526829, 0.428409 ), -1.16477, -1.16477, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=28]
emission_shape = 2
emission_box_extents = Vector3( 10, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 246.45
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_curve = SubResource( 25 )
scale = 12.0
scale_curve = SubResource( 27 )

[sub_resource type="Gradient" id=29]
colors = PoolColorArray( 0, 0.6, 0.858824, 1, 0, 0.6, 0.858824, 0 )

[sub_resource type="GradientTexture" id=30]
gradient = SubResource( 29 )

[sub_resource type="Curve" id=31]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.287554, 0.531818 ), -2.47982, -2.47982, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 31 )

[sub_resource type="Curve" id=33]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=34]
curve = SubResource( 33 )

[sub_resource type="ParticlesMaterial" id=35]
lifetime_randomness = 0.7
trail_size_modifier = SubResource( 34 )
emission_shape = 1
emission_sphere_radius = 25.71
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.32
gravity = Vector3( 0, 1200, 0 )
initial_velocity = 525.58
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 66.43
damping_random = 0.44
angle = 4.8
angle_random = 0.48
scale = 12.0
scale_curve = SubResource( 32 )
color_ramp = SubResource( 30 )
hue_variation = 0.05
hue_variation_random = 0.74

[node name="Player" type="KinematicBody2D"]
light_mask = 2
position = Vector2( 585.117, 407.026 )
z_index = 1
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.08411, -2.18005 )
scale = Vector2( 4, 4 )
frames = SubResource( 17 )
animation = "fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.329163, -0.375854 )
shape = SubResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1.65405, 11.042 )
current = true
zoom = Vector2( 1.2, 1.2 )
process_mode = 0
limit_left = -260
limit_top = -300
limit_right = 3480
limit_bottom = 1020
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 8.0
script = ExtResource( 4 )

[node name="Particle" type="Node2D" parent="."]

[node name="DashParticle" type="Particles2D" parent="Particle"]
show_behind_parent = true
position = Vector2( 2.16504, -0.28244 )
scale = Vector2( 10, 10 )
emitting = false
amount = 20
lifetime = 0.75
one_shot = true
explosiveness = 0.82
local_coords = false
process_material = SubResource( 23 )

[node name="JumpParticle" type="Particles2D" parent="Particle"]
position = Vector2( -1.55896, 31.0211 )
emitting = false
amount = 10
lifetime = 0.35
one_shot = true
explosiveness = 0.72
local_coords = false
process_material = SubResource( 28 )

[node name="SplashParticle" type="Particles2D" parent="Particle"]
emitting = false
amount = 20
lifetime = 1.5
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -1000, -1000, 1000, 1000 )
local_coords = false
process_material = SubResource( 35 )

[node name="Sound" type="Node" parent="."]

[node name="DashSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 5 )

[node name="JumpSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 8 )
volume_db = -2.0

[node name="SplashSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="FlapSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 9 )
volume_db = -3.0
pitch_scale = 1.3

[node name="Health" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Interface" parent="." instance=ExtResource( 10 )]
margin_left = -97.117
margin_top = -112.026
margin_right = 276.883
margin_bottom = 48.974

[connection signal="health_changed" from="Health" to="." method="_on_Health_health_changed"]
[connection signal="coins_changed" from="Interface" to="." method="_on_Interface_coins_changed"]
